Bug 1317901 - Ensure image loads don't short-circuit if element's adopting steps are run; r=jdm

MozReview-Commit-ID: Cbg3EHtyL8f